UI: fix issues with other os
Window content may appear chopped off for certain other OS, not
very sure why- but to be safe, let's increase the height of the
CustomerWindow and also put the content of the windows inside
a scrollpane so the window becomes scrollable instead of getting
cut off.

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -515,6 +515,10 @@
     -fx-text-fill: #333F4F!important;
 }
 
+.windowScrollPane .viewport {
+    -fx-background-color: #3C424B;
+}
+
 #iterationListView.list-view {
     -fx-padding: 0px;
     -fx-background-color: #15181F;
